# elektron

./: .gitignore  LICENSE.md  Nanosight.sln  README.md  Vagrantfile  bootstrap.sh  build.gradle
Nanosight/: Matrix.cpp  Matrix.hpp  Nanosight.vcxproj  Nanosight.vcxproj.filters  Vector.cpp  Vector.hpp  main.cpp
Nanosight/blas/: Matrix.cpp  Matrix.hpp
Nanosight/cv/: VCapture.h
Nanosight/nblas/: Matrix.cpp  Matrix.hpp
elektron/: elektron.hpp
elektron/controllers/: PID.hpp
elektron/cv/: Convolve.hpp  Detector.hpp  Image.hpp
elektron/filters/: EKalman.hpp  Kalman.hpp  Particle.hpp
elektron/math/: Derivatives.hpp  Integrals.hpp  Matrix.hpp
elektron/nn/: Neuron.hpp
neuralib/: main.cpp
neuralib/blas/: Matrix.hpp
src/: CMakeLists.txt  elektron.hpp  main.cpp
src/blas/: CMakeLists.txt  Matrix.cpp  Matrix.hpp  PoolManager.hpp  Solver.hpp
src/controllers/: PID.hpp
src/cv/: CMakeLists.txt  Convolve.hpp  Image.hpp  IntegralImage.cpp  IntegralImage.hpp
src/filters/: CMakeLists.txt  EKalman.hpp  Kalman.hpp
src/math/: CMakeLists.txt  Derivatives.hpp  Integrals.hpp  Matrix.hpp  Solver.hpp
src/nn/: .Node.hpp.swp  Layer.hpp  Node.hpp
src/stats/: CMakeLists.txt  LinRegression.cpp  LinRegression.hpp  Regression.hpp
test/: CMakeLists.txt  test.cpp
